[package]
name = "redis_r2d2"
version = "0.17.0"
authors = ["ACS <arvancs@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Redis support for the r2d2 connection pool"
repository = "https://github.com/arvancs/r2d2-redis"
documentation = "https://docs.rs/redis_r2d2"
keywords = ["redis", "pool", "database", "r2d2"]
include = ["src/**/*", "LICENSE", "Cargo.toml"]
edition = "2018"

[dependencies]
r2d2 = "0.8"
redis = "0.17"
